--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"lint": "tslint -p tsconfig.json",
 		"prepare": "npm run build",
 		"prepublishOnly": "npm test && npm run lint",
-		"preversion": "npm run lint",
+		"preversion": "npm run test && npm run lint",
 		"version": "npm run format && git add -A src",
 		"postversion": "git push && git push --tags"
 	},
