--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
 		"module": "commonjs",
 		"declaration": true,
 		"outDir": "./lib",
-		"strict": true
-	},
-	"include": ["src"],
+		"strict": true,
+        "downlevelIteration": true,
+    },
+    "include": ["src"],
 	"exclude": ["node_modules", "**/__tests__/*", "**/*.spec.ts", "**/*.spec.js"]
 }
