--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		]
 	},
 	"dependencies": {
+		"@tgillespie/hash-data-structures": "^1.0.2",
 		"@types/lodash": "^4.14.170",
 		"lodash": "^4.17.21"
 	}
