--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
 	"name": "@tgillespie/graph",
 	"version": "0.2.0",
 	"description": "",
-	"main": "index.ts",
+	"main": "lib/index.js",
 	"files": [
 		"lib/**/*"
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/TimothyGillespie/JavascriptGraph.git"
+		"url": "https://github.com/TimothyGillespie/JavaScriptGraph.git"
 	},
 	"scripts": {
 		"build": "npm run build:linux",
