--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 	},
 	"jest": {
 		"transform": {
-			"^.+\\.(t|j)sx?$": "ts-jest"
+			"^.+\\.tsx?$": "ts-jest"
 		},
 		"testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
 		"moduleFileExtensions": [
