--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
 		"ts-jest": "^27.0.2",
 		"tslint": "^6.1.3",
 		"tslint-config-prettier": "^1.18.0",
-		"typescript": "^4.3.2"
+		"typescript": "^4.3.2",
+		"@types/lodash": "^4.14.170",
+		"lodash": "^4.17.21"
 	},
 	"jest": {
 		"transform": {
@@ -51,8 +53,8 @@
 		]
 	},
 	"dependencies": {
-		"@tgillespie/hash-data-structures": "^1.1.0",
-		"@types/lodash": "^4.14.170",
-		"lodash": "^4.17.21"
+		"@tgillespie/hash-data-structures": "^1.2.0",
+		"lodash.clonedeep": "^4.5.0",
+		"lodash.uniq": "^4.5.0"
 	}
 }
