Remove unused uniq dependency

--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
 	},
 	"dependencies": {
 		"@tgillespie/hash-data-structures": "^1.2.0",
-		"lodash.clonedeep": "^4.5.0",
-		"lodash.uniq": "^4.5.0"
+		"lodash.clonedeep": "^4.5.0"
 	}
 }
