--- a/package.json
+++ b/package.json
@@ -26,19 +26,20 @@
 	"author": "Timothy Gillespie",
 	"license": "GPL-3.0",
 	"devDependencies": {
-		"@stryker-mutator/core": "^5.4.0",
-		"@stryker-mutator/jest-runner": "^5.4.0",
-		"@types/jest": "^26.0.23",
-		"jest": "^27.0.4",
-		"prettier": "^2.3.0",
-		"ts-jest": "^27.0.2",
+		"@stryker-mutator/core": "^5.6.1",
+		"@stryker-mutator/jest-runner": "^5.6.1",
+		"@types/jest": "^27.4.0",
+		"jest": "^27.5.1",
+		"prettier": "^2.5.1",
+		"ts-jest": "^27.1.3",
 		"tslint": "^6.1.3",
 		"tslint-config-prettier": "^1.18.0",
-		"typescript": "^4.3.2",
-		"@types/lodash": "^4.14.170",
+		"typescript": "^4.5.5",
+		"@types/lodash": "^4.14.178",
 		"lodash": "^4.17.21"
 	},
 	"jest": {
+		"collectCoverage": true,
 		"transform": {
 			"^.+\\.tsx?$": "ts-jest"
 		},
