--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
 		"@stryker-mutator/core": "^5.6.1",
 		"@stryker-mutator/jest-runner": "^5.6.1",
 		"@types/jest": "^27.4.0",
+		"@types/lodash": "^4.14.178",
+		"@types/lodash.clonedeep": "^4.5.6",
 		"jest": "^27.5.1",
+		"lodash": "^4.17.21",
 		"prettier": "^2.5.1",
 		"ts-jest": "^27.1.3",
 		"tslint": "^6.1.3",
 		"tslint-config-prettier": "^1.18.0",
-		"typescript": "^4.5.5",
-		"@types/lodash": "^4.14.178",
-		"lodash": "^4.17.21"
+		"typescript": "^4.5.5"
 	},
 	"jest": {
 		"collectCoverage": true,
