--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,8 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./unit-test-coverage-reports/${{steps.tag.outputs.tag}}
+          publish_dir: ./coverage
+          destination_dir: ./unit-test-coverage-reports/${{steps.tag.outputs.tag}}
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_PUBLISH_TOKEN }}
