--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,13 +22,25 @@ jobs:
         uses: dawidd6/action-get-tag@v1
         with:
           strip_v: true
-      - name: Publish Unit Test Coverage (Jest)
+      - name: Publish as ${{steps.tag.outputs.tag}} Unit Test Coverage (Jest)
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./coverage
           destination_dir: ./unit-test-coverage-reports/${{steps.tag.outputs.tag}}
-      - name: Publish Mutation Test Coverage (Stryker)
+      - name: Publish as latest Unit Test Coverage (Jest)
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./coverage
+          destination_dir: ./unit-test-coverage-reports/latest
+      - name: Publish as latest Mutation Test Coverage (Stryker)
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./reports/mutation/html
+          destination_dir: ./mutation-test-coverage-reports/latest
+      - name: Publish as ${{steps.tag.outputs.tag}} Mutation Test Coverage (Stryker)
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
