--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,24 +28,32 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./coverage
           destination_dir: ./unit-test-coverage-reports/${{steps.tag.outputs.tag}}
+          publish_branch: jekyll-setup
+          enable_jekyll: true
       - name: Publish as latest Unit Test Coverage (Jest)
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./coverage
           destination_dir: ./unit-test-coverage-reports/latest
+          publish_branch: jekyll-setup
+          enable_jekyll: true
       - name: Publish as latest Mutation Test Coverage (Stryker)
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./reports/mutation/html
           destination_dir: ./mutation-test-coverage-reports/latest
+          publish_branch: jekyll-setup
+          enable_jekyll: true
       - name: Publish as ${{steps.tag.outputs.tag}} Mutation Test Coverage (Stryker)
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./reports/mutation/html
           destination_dir: ./mutation-test-coverage-reports/${{steps.tag.outputs.tag}}
+          publish_branch: jekyll-setup
+          enable_jekyll: true
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_PUBLISH_TOKEN }}
