--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Publish as ${{steps.tag.outputs.tag}} Mutation Test Coverage (Stryker)
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          personal_token: ${{ secrets.JEKYLL_PAT }}
           publish_dir: ./reports/mutation/html
           destination_dir: ./mutation-test-coverage-reports/${{steps.tag.outputs.tag}}
           publish_branch: jekyll-setup
