--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: JavaScript Graph
 email: JavaScriptGraph@gillespie.eu
 description: >- # this means to ignore newlines until "baseurl:"
   A JavaScript Graph library
-baseurl: "JavaScriptGraph" # the subpath of your site, e.g. /blog
+baseurl: "/JavaScriptGraph/" # the subpath of your site, e.g. /blog
 url: "timothygillespie.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
