--- a/_local.yml
+++ b/_local.yml
@@ -1,3 +1,3 @@
 # Recommended to run locally with: jekyll serve --config _config.yml,_local.yml --livereload
-baseurl: ""
-url: ""
+baseurl: "/JavaScriptGraph/"
+url: "localhost:4000"
