--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ url: "timothygillespie.github.io" # the base hostname & protocol for your site, 
 # Build settings
 theme: minima
 plugins:
+  - jekyll-sitemap
   - jekyll-feed
 
 # Exclude from processing.
