Adjust prettier config

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,6 @@
 {
 	"printWidth": 120,
-	"useTabs": true,
 	"tabWidth": 4,
-	"trailingComma": "all",
+	"trailingComma": "es5",
 	"singleQuote": true
 }
