--- a/.woodpecker/test.yml
+++ b/.woodpecker/test.yml
@@ -14,5 +14,10 @@ pipeline:
   test:
     image: node:${NODE_VERSION}
     commands:
-      - npm ci
       - npm test
+
+depends_on:
+  - install
+
+runs_on:
+  - success
