--- a/.woodpecker/test.yml
+++ b/.woodpecker/test.yml
@@ -1,23 +1,41 @@
-matrix:
-  NODE_VERSION:
-    - 18-alpine
-    - 17-alpine
-    - 16-alpine
-    - 15-alpine
-    - 14-alpine
-    - 13-alpine
-    - 12-alpine
-    - 11-alpine
-    - 10-alpine
-
 pipeline:
-  test:
-    image: node:${NODE_VERSION}
+  install:
+    image: node:16-alpine
+    commands:
+      - npm ci
+  test18:
+    image: node:18-alpine
     commands:
       - npm test
-
-depends_on:
-  - install
-
-runs_on:
-  - success
+  test17:
+    image: node:17-alpine
+    commands:
+      - npm test
+  test16:
+    image: node:16-alpine
+    commands:
+      - npm test
+  test15:
+    image: node:15-alpine
+    commands:
+      - npm test
+  test14:
+    image: node:14-alpine
+    commands:
+      - npm test
+  test13:
+    image: node:13-alpine
+    commands:
+      - npm test
+  test12:
+    image: node:12-alpine
+    commands:
+      - npm test
+  test11:
+    image: node:11-alpine
+    commands:
+      - npm test
+  test10:
+    image: node:10-alpine
+    commands:
+      - npm test
